# api/handler/seller.go
@@ -6,6 +6,7 @@ import (
 	"errors"
 	"fmt"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -29,12 +30,12 @@ func (h *handler) CreateSeller(c *gin.Context) {
 		return
 	}
 
-	if !validator.ValidatePhone(req.Phone){
+	if !validator.ValidatePhone(req.Phone) {
 		handleGrpcErrWithDescription(c, h.log, errors.New("error while validating phone"), "wrong phone")
 		return
 	}
 
-	if !validator.ValidateGmail(req.Gmail){
+	if !validator.ValidateGmail(req.Gmail) {
 		handleGrpcErrWithDescription(c, h.log, errors.New("error while validating gmail"), "wrong gmail")
 		return
 	}
@@ -49,26 +50,20 @@ func (h *handler) CreateSeller(c *gin.Context) {
 	c.JSON(http.StatusOK, resp)
 }
 
-// @Router		/v1/seller/getbyid [post]
+// @Router		/v1/seller/getbyid/{id} [get]
 // @Summary		Get by id a seller
 // @Description	This api get by id a seller
 // @Tags		Seller
-// Accept		json
 // @Produce		json
-// @Param		seller body user_service.SellerPrimaryKey true "seller"
+// @Param		id path string true "Seller id"
 // @Success		200  {object}  models.ResponseSuccess
 // @Failure		400  {object}  models.ResponseError
 // @Failure		404  {object}  models.ResponseError
 // @Failure		500  {object}  models.ResponseError
 func (h *handler) GetByIdSeller(c *gin.Context) {
-	id := &us.SellerPrimaryKey{}
+	id := c.Param("id")
 
-	if err := c.ShouldBindJSON(&id); err != nil {
-		handleGrpcErrWithDescription(c, h.log, err, "error while binding body")
-		return
-	}
-
-	resp, err := h.grpcClient.SellerService().GetByID(c.Request.Context(), id)
+	resp, err := h.grpcClient.SellerService().GetByID(c.Request.Context(), &us.SellerPrimaryKey{Id: id})
 	if err != nil {
 		fmt.Errorf("error while get delete", err)
 		handleGrpcErrWithDescription(c, h.log, err, "error while getting by id")
@@ -78,13 +73,14 @@ func (h *handler) GetByIdSeller(c *gin.Context) {
 	c.JSON(http.StatusOK, resp)
 }
 
-// @Router		/v1/seller/getlist [post]
+// @Router		/v1/seller/getlist [get]
 // @Summary		Get list a seller
 // @Description	This api get list a seller
 // @Tags		Seller
-// Accept		json
 // @Produce		json
-// @Param		seller body user_service.GetListSellerRequest true "seller"
+// @Param       limit   query int64  false "Limit"
+// @Param       offset  query int64  false "Offset"
+// @Param       search  query string false "Search gender"
 // @Success		200  {object}  models.ResponseSuccess
 // @Failure		400  {object}  models.ResponseError
 // @Failure		404  {object}  models.ResponseError
@@ -92,15 +88,38 @@ func (h *handler) GetByIdSeller(c *gin.Context) {
 func (h *handler) GetListSeller(c *gin.Context) {
 	req := &us.GetListSellerRequest{}
 
-	if err := c.ShouldBindJSON(&req); err != nil {
-		handleGrpcErrWithDescription(c, h.log, err, "error while binding body")
-		return
+	limitStr := c.Query("limit")
+	offsetStr := c.Query("offset")
+	search := c.Query("search")
+
+	if limitStr != "" {
+		limit, err := strconv.ParseInt(limitStr, 10, 64)
+		if err != nil {
+			fmt.Errorf("error while parse limit", err)
+			handleGrpcErrWithDescription(c, h.log, err, "error while parse limit")
+			return
+		}
+		req.Limit = limit
+	}
+
+	if offsetStr != "" {
+		offset, err := strconv.ParseInt(offsetStr, 10, 64)
+		if err != nil {
+			fmt.Errorf("error while parse offset", err)
+			handleGrpcErrWithDescription(c, h.log, err, "error while parse offset")
+			return
+		}
+		req.Offset = offset
+	}
+
+	if search != "" {
+		req.Search = search
 	}
 
 	resp, err := h.grpcClient.SellerService().GetList(c.Request.Context(), req)
 	if err != nil {
 		fmt.Errorf("error while get list", err)
-		handleGrpcErrWithDescription(c, h.log, err, "error while get list")
+		handleGrpcErrWithDescription(c, h.log, err, "error while getting list seller")
 		return
 	}
 
