# api/handler/shop.go
@@ -6,6 +6,7 @@ import (
 	"errors"
 	"fmt"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -29,11 +30,10 @@ func (h *handler) CreateShop(c *gin.Context) {
 		return
 	}
 
-	if !validator.ValidatePhone(req.Phone){
+	if !validator.ValidatePhone(req.Phone) {
 		handleGrpcErrWithDescription(c, h.log, errors.New("error while validating phone"), "wrong phone")
 		return
 	}
-
 
 	resp, err := h.grpcClient.ShopService().Create(c.Request.Context(), req)
 	if err != nil {
@@ -45,26 +45,21 @@ func (h *handler) CreateShop(c *gin.Context) {
 	c.JSON(http.StatusOK, resp)
 }
 
-// @Router		/v1/shop/getbyid [post]
+// @Router		/v1/shop/getbyid/{id} [get]
 // @Summary		Get by id a shop
 // @Description	This api get by id a shop
 // @Tags		Shop
-// Accept		json
 // @Produce		json
-// @Param		shop body user_service.ShopPrimaryKey true "shop"
+// @Param		id path string true "Shop id"
 // @Success		200  {object}  models.ResponseSuccess
 // @Failure		400  {object}  models.ResponseError
 // @Failure		404  {object}  models.ResponseError
 // @Failure		500  {object}  models.ResponseError
 func (h *handler) GetByIdShop(c *gin.Context) {
-	id := &us.ShopPrimaryKey{}
+	id := c.Param("id")
 
-	if err := c.ShouldBindJSON(&id); err != nil {
-		handleGrpcErrWithDescription(c, h.log, err, "error while binding body")
-		return
-	}
 
-	resp, err := h.grpcClient.ShopService().GetById(c.Request.Context(), id)
+	resp, err := h.grpcClient.ShopService().GetById(c.Request.Context(), &us.ShopPrimaryKey{Id: id})
 	if err != nil {
 		fmt.Errorf("error while get delete", err)
 		handleGrpcErrWithDescription(c, h.log, err, "error while delete")
@@ -74,13 +69,14 @@ func (h *handler) GetByIdShop(c *gin.Context) {
 	c.JSON(http.StatusOK, resp)
 }
 
-// @Router		/v1/shop/getlist [post]
+// @Router		/v1/shop/getlist [get]
 // @Summary		Get list a shop
 // @Description	This api get list a shop
 // @Tags		Shop
-// Accept		json
 // @Produce		json
-// @Param		shop body user_service.GetListShopRequest true "shop"
+// @Param       limit   query int64  false "Limit"
+// @Param       offset  query int64  false "Offset"
+// @Param       search  query string false "Search gender"
 // @Success		200  {object}  models.ResponseSuccess
 // @Failure		400  {object}  models.ResponseError
 // @Failure		404  {object}  models.ResponseError
@@ -88,15 +84,38 @@ func (h *handler) GetByIdShop(c *gin.Context) {
 func (h *handler) GetListShop(c *gin.Context) {
 	req := &us.GetListShopRequest{}
 
-	if err := c.ShouldBindJSON(&req); err != nil {
-		handleGrpcErrWithDescription(c, h.log, err, "error while binding body")
-		return
+	limitStr := c.Query("limit")
+	offsetStr := c.Query("offset")
+	search := c.Query("search")
+
+	if limitStr != "" {
+		limit, err := strconv.ParseInt(limitStr, 10, 64)
+		if err != nil {
+			fmt.Errorf("error while parse limit", err)
+			handleGrpcErrWithDescription(c, h.log, err, "error while parse limit")
+			return
+		}
+		req.Limit = limit
+	}
+
+	if offsetStr != "" {
+		offset, err := strconv.ParseInt(offsetStr, 10, 64)
+		if err != nil {
+			fmt.Errorf("error while parse offset", err)
+			handleGrpcErrWithDescription(c, h.log, err, "error while parse offset")
+			return
+		}
+		req.Offset = offset
+	}
+
+	if search != "" {
+		req.Search = search
 	}
 
 	resp, err := h.grpcClient.ShopService().GetList(c.Request.Context(), req)
 	if err != nil {
 		fmt.Errorf("error while get list", err)
-		handleGrpcErrWithDescription(c, h.log, err, "error while get list")
+		handleGrpcErrWithDescription(c, h.log, err, "error while getting list shop")
 		return
 	}
 
