# api/handler/systemuser.go
@@ -6,6 +6,7 @@ import (
 	"errors"
 	"fmt"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -29,12 +30,12 @@ func (h *handler) CreateSystemUser(c *gin.Context) {
 		return
 	}
 
-	if !validator.ValidatePhone(req.Phone){
+	if !validator.ValidatePhone(req.Phone) {
 		handleGrpcErrWithDescription(c, h.log, errors.New("error while validating phone"), "wrong phone")
 		return
 	}
 
-	if !validator.ValidateGmail(req.Gmail){
+	if !validator.ValidateGmail(req.Gmail) {
 		handleGrpcErrWithDescription(c, h.log, errors.New("error while validating gmail"), "wrong gmail")
 		return
 	}
@@ -49,28 +50,23 @@ func (h *handler) CreateSystemUser(c *gin.Context) {
 	c.JSON(http.StatusOK, resp)
 }
 
-// @Router		/v1/system-user/getbyid [post]
+// @Router		/v1/system-user/getbyid/{id} [get]
 // @Summary		Get by id a system-user
 // @Description	This api get by id a system-user
 // @Tags		SystemUser
 // Accept		json
 // @Produce		json
-// @Param		system-user body user_service.SystemUserPrimaryKey true "system-user"
+// @Param		id path string true "System User id"
 // @Success		200  {object}  models.ResponseSuccess
 // @Failure		400  {object}  models.ResponseError
 // @Failure		404  {object}  models.ResponseError
 // @Failure		500  {object}  models.ResponseError
 func (h *handler) GetByIdSystemUser(c *gin.Context) {
-	id := &us.SystemUserPrimaryKey{}
+	id := c.Param("id")
 
-	if err := c.ShouldBindJSON(&id); err != nil {
-		handleGrpcErrWithDescription(c, h.log, err, "error while binding body")
-		return
-	}
-
-	resp, err := h.grpcClient.SystemUserService().GetByID(c.Request.Context(), id)
+	resp, err := h.grpcClient.SystemUserService().GetByID(c.Request.Context(), &us.SystemUserPrimaryKey{Id: id})
 	if err != nil {
-		fmt.Errorf("error while get delete", err)
+		fmt.Errorf("error while get get by id", err)
 		handleGrpcErrWithDescription(c, h.log, err, "error while getting by id")
 		return
 	}
@@ -78,13 +74,14 @@ func (h *handler) GetByIdSystemUser(c *gin.Context) {
 	c.JSON(http.StatusOK, resp)
 }
 
-// @Router		/v1/system-user/getlist [post]
+// @Router		/v1/system-user/getlist [get]
 // @Summary		Get list a system-user
 // @Description	This api get list a system-user
 // @Tags		SystemUser
-// Accept		json
 // @Produce		json
-// @Param		system-user body user_service.GetListSystemUserRequest true "system-user"
+// @Param       limit   query int64  false "Limit"
+// @Param       offset  query int64  false "Offset"
+// @Param       search  query string false "Search gender"
 // @Success		200  {object}  models.ResponseSuccess
 // @Failure		400  {object}  models.ResponseError
 // @Failure		404  {object}  models.ResponseError
@@ -92,15 +89,38 @@ func (h *handler) GetByIdSystemUser(c *gin.Context) {
 func (h *handler) GetListSystemUser(c *gin.Context) {
 	req := &us.GetListSystemUserRequest{}
 
-	if err := c.ShouldBindJSON(&req); err != nil {
-		handleGrpcErrWithDescription(c, h.log, err, "error while binding body")
-		return
+	limitStr := c.Query("limit")
+	offsetStr := c.Query("offset")
+	search := c.Query("search")
+
+	if limitStr != "" {
+		limit, err := strconv.ParseInt(limitStr, 10, 64)
+		if err != nil {
+			fmt.Errorf("error while parse limit", err)
+			handleGrpcErrWithDescription(c, h.log, err, "error while parse limit")
+			return
+		}
+		req.Limit = limit
+	}
+
+	if offsetStr != "" {
+		offset, err := strconv.ParseInt(offsetStr, 10, 64)
+		if err != nil {
+			fmt.Errorf("error while parse offset", err)
+			handleGrpcErrWithDescription(c, h.log, err, "error while parse offset")
+			return
+		}
+		req.Offset = offset
+	}
+
+	if search != "" {
+		req.Search = search
 	}
 
 	resp, err := h.grpcClient.SystemUserService().GetList(c.Request.Context(), req)
 	if err != nil {
 		fmt.Errorf("error while get list", err)
-		handleGrpcErrWithDescription(c, h.log, err, "error while get list")
+		handleGrpcErrWithDescription(c, h.log, err, "error while getting list system-user")
 		return
 	}
 
